fruits/banana/dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana
spec:
  replicas: 1
