fruits/banana/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana
spec:
  ingressClassName: nginx
  rules:
  - host: demo-banana-dev.your.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banana
            port:
              name: http
